Add get metadata track value for sample
