# src/specs/api.yaml
@@ -929,6 +929,42 @@ paths:
             application/json:
               schema:
                 $ref: ./models/HTTPError.v1.yaml
+  '/projects/{projectUuid}/samples/{sampleUuid}/metadataTracks/{metadataTrackUuid}':
+    parameters:
+      - name: projectUuid
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: sampleUuid
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: metadataTrackUuid
+        in: path
+        required: true
+        schema:
+          type: string
+    get:
+      summary: Get a metadata track value
+      description: Get a metadata track value for a sample in particular
+      operationId: getMetadataTrackValueForSample
+      x-eov-operation-id: metadataTracks#getValueForSample
+      x-eov-operation-handler: routes/metadataTracks
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: ./models/HTTPError.v1.yaml
   '/projects/{projectUuid}/samples':
     parameters:
       - name: projectUuid
